--- a/pom.xml
+++ b/pom.xml
@@ -36,4 +36,12 @@
             </plugin>
         </plugins>
     </build>
+
+    <dependencies>
+        <dependency>
+            <groupId>com.smartbear.soapui</groupId>
+            <artifactId>soapui-maven-plugin</artifactId>
+            <version>5.0.0</version>
+        </dependency>
+    </dependencies>
 </project>
