--- a/pom.xml
+++ b/pom.xml
@@ -1,47 +1,48 @@
-<project
-        xmlns="http://maven.apache.org/POM/4.0.0" 
-        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-        xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <name>Integration Tests (SoapUI)</name>
-    <groupId>soapui-tests</groupId>
-    <artifactId>com.example.soapuitests</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <groupId>src.main.resources</groupId>
+    <artifactId>soapui-maven2-plugin</artifactId>
     <packaging>jar</packaging>
+    <version>1.0-SNAPSHOT</version>
+    <name>Maven 2 soapUI Sample</name>
+    <url>http://maven.apache.org</url>
+
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>3.8.1</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
+
+    <pluginRepositories>
+        <pluginRepository>
+            <id>smartbear-plugin-repository</id>
+            <url>http://www.soapui.org/repository/maven2/</url>
+        </pluginRepository>
+    </pluginRepositories>
     <build>
         <plugins>
             <plugin>
                 <groupId>com.smartbear.soapui</groupId>
                 <artifactId>soapui-maven-plugin</artifactId>
-                <version>5.0.0</version>
-
+                <version>5.2.1</version>
+                <configuration>
+                    <projectFile>HappyPawsAPI-soapui-project.xml</projectFile>
+                    <junitReport>true</junitReport>
+                    <outputFolder>reports</outputFolder>
+                </configuration>
                 <executions>
                     <execution>
-                        <id>RestAPI-positiveTestSuite</id>
-                        <configuration>
-                            <projectFile>HappyPawsAPI-soapui-project.xml</projectFile>
-                            <outputFolder>target/surefire-reports</outputFolder>
-                            <testSuite>Positive cases</testSuite>
-                            <junitReport>true</junitReport>
-                            <exportwAll>true</exportwAll>
-                            <printReport>true</printReport>
-                            <testFailIgnore>true</testFailIgnore>
-                        </configuration>
+                        <phase>test</phase>
                         <goals>
                             <goal>test</goal>
                         </goals>
-                        <phase>test</phase>
                     </execution>
                 </executions>
             </plugin>
         </plugins>
     </build>
-
-    <dependencies>
-        <dependency>
-            <groupId>com.smartbear.soapui</groupId>
-            <artifactId>soapui-maven-plugin</artifactId>
-            <version>5.0.0</version>
-        </dependency>
-    </dependencies>
 </project>
