--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,11 @@
             <version>3.8.1</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.maven.wagon</groupId>
+            <artifactId>wagon-http-lightweight</artifactId>
+            <version>3.5.1</version>
+        </dependency>
     </dependencies>
 
     <pluginRepositories>
